<?xml version="1.0" encoding="UTF-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            layout="@layout/dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/linear1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/salary_detail_page_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/salary_detail_page_time"
                            android:textSize="18sp"
                            android:textStyle="bold"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingStart="20dp"
                            android:paddingEnd="10dp"
                            android:layout_marginTop="10dp">
                            <TextView
                                android:id="@+id/salary_detail_page_salary"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/salary_detail_page_salary"
                                android:textSize="16sp" />
                            <TextView
                                android:id="@+id/salary_detail_page_time_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/salary_detail_page_salary_number"
                                android:textSize="18sp"
                                android:textColor="@color/red"
                                android:gravity="end"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingStart="20dp"
                            android:paddingEnd="10dp"
                            android:layout_marginTop="10dp">
                            <TextView
                                android:id="@+id/salary_detail_page_award"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/salary_detail_page_award"
                                android:textSize="16sp" />
                            <TextView
                                android:id="@+id/salary_detail_page_award_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/salary_detail_page_award_number"
                                android:textColor="@color/blue"
                                android:textSize="18sp"
                                android:gravity="end"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingStart="20dp"
                            android:paddingEnd="10dp"
                            android:layout_marginTop="10dp">
                            <TextView
                                android:id="@+id/salary_detail_page_assist"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/salary_search_page_assist"
                                android:textSize="16sp" />
                            <TextView
                                android:id="@+id/salary_detail_page_assist_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/salary_detail_page_assist_number"
                                android:textSize="18sp"
                                android:gravity="end"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingStart="20dp"
                            android:paddingEnd="10dp"
                            android:layout_marginTop="10dp">
                            <TextView
                                android:id="@+id/salary_detail_page_assurance"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/salary_detail_page_assurance"
                                android:textSize="16sp" />
                            <TextView
                                android:id="@+id/salary_detail_page_assurance_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/salary_detail_page_assurance_number"
                                android:textSize="18sp"
                                android:gravity="end"/>
                        </LinearLayout>

                        <LinearLayout

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingStart="20dp"
                            android:paddingEnd="10dp"
                            android:layout_marginTop="10dp">
                            <TextView
                                android:id="@+id/salary_detail_page_tax"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/salary_detail_page_tax"
                                android:textSize="16sp" />
                            <TextView
                                android:id="@+id/salary_detail_page_tax_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/salary_detail_page_tax_number"
                                android:textSize="18sp"
                                android:gravity="end"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingStart="20dp"
                            android:paddingEnd="10dp"
                            android:layout_marginTop="10dp">
                            <TextView
                                android:id="@+id/salary_detail_page_other"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/salary_detail_page_other"
                                android:textSize="16sp" />
                            <TextView
                                android:id="@+id/salary_detail_page_other_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/salary_detail_page_other_number"
                                android:textSize="18sp"
                                android:gravity="end"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingStart="20dp"
                            android:paddingEnd="10dp"
                            android:layout_marginTop="10dp">
                            <TextView
                                android:id="@+id/salary_detail_page_sum"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/salary_detail_page_sum"
                                android:textSize="16sp" />
                            <TextView
                                android:id="@+id/salary_detail_page_sum_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/salary_detail_page_sum_number"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                android:gravity="end"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingStart="20dp"
                            android:paddingEnd="10dp"
                            android:layout_marginTop="35dp">
                            <TextView
                                android:id="@+id/salary_detail_page_startday_title"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/salary_detail_page_startday"
                                android:textSize="16sp" />
                            <TextView
                                android:id="@+id/salary_detail_page_startday"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:text="@string/salary_detail_page_receive_day"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingStart="20dp"
                            android:layout_marginTop="5dp"
                            android:paddingEnd="10dp">
                            <TextView
                                android:id="@+id/salary_detail_page_receive"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/salary_detail_page_receive"
                                android:textSize="16sp" />
                            <TextView
                                android:id="@+id/salary_detail_page_receive_day"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:text="@string/salary_detail_page_receive_day"
                                android:textSize="16sp" />
                        </LinearLayout>
                    </LinearLayout>
                </ScrollView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>
    <include
        android:id="@+id/bottom_navigation"
        layout="@layout/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />
</RelativeLayout>