<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/background"
    tools:context=".sign_in">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/signin_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin_title"
            android:layout_marginBottom="10dp"
            style="@style/text"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textAlignment="center"
            tools:targetApi="jelly_bean" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/assert_account"/>
        <EditText
            android:id="@+id/signin_staffID_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signin_staffID_input"
            android:textSize="14sp"
            style="@style/drawable_assert_and_text"
            android:padding="12dp"
            android:inputType="text"
            android:layout_marginTop="32dp"
            tools:targetApi="jelly_bean"/>

        <EditText
            android:id="@+id/signin_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signin_password_input"
            android:textSize="14sp"
            style="@style/drawable_assert_and_text"
            android:padding="12dp"
            android:inputType="text"
            android:layout_marginTop="16dp"
            tools:targetApi="jelly_bean"/>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Button
            android:id="@+id/signin_button_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin_button_signin"
            android:textStyle="bold"
            android:textSize="18sp"
            style="@style/button_text"
            android:layout_marginTop="16dp"
            android:padding="12dp"/>
        <TextView
            android:id="@+id/signin_forgotpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_forgotpass"
            style="@style/text"
            android:textSize="14sp"
            tools:targetApi="jelly_bean"
            android:layout_marginTop="32dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
