<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    style="@style/background"
    android:layout_height="match_parent">
    <include
        android:id="@+id/dasboard"
        layout="@layout/dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textViewAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yourapp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        style="@style/text"
        android:layout_below="@+id/dasboard"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/textViewVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        style="@style/text"
        android:textSize="18sp"
        android:layout_below="@id/textViewAppName"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_about"
        android:textSize="16sp"
        android:layout_below="@id/textViewVersion"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <!-- Add more TextViews or other views as needed -->

</RelativeLayout>
