<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <ImageButton
                android:id="@+id/new_forum_back_imgbtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/back_bg"
                android:backgroundTint="@color/white" />

            <TextView
                android:id="@+id/forum_created_title_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forum_created_title_page"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/forum_created_title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:background="@drawable/no_underline_for_edt"
                android:textSize="18sp"
                android:hint="@string/forum_created_title_edit_text"/>

            <EditText
                android:id="@+id/forum_created_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:gravity="top"
                android:hint="@string/forum_created_content"
                android:minLines="18"
                android:padding="10dp"
                android:textSize="14sp"/>
            <Button
                android:id="@+id/forum_created_post_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forum_created_post_btn"
                android:backgroundTint="@color/teal"
                android:layout_gravity="end"/>
        </LinearLayout>
    </ScrollView>

    <!-- Bottom Navigation -->
    <include
        android:id="@+id/navigation_bottom"
        layout="@layout/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
